Fix social media overlap

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -31,6 +31,7 @@
   grid-row: 2 / span 2;
   place-self: end;
   margin-right: 30px;
+  z-index: 10;
 }
 
 .footer {
